# 2048-ppo-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: black.yml  pre-merge-test.yml  pytest.yml
configs/: train_ppo_agent.yaml
configs/data/: default.yaml
configs/experiment/: resume_train_ppo_agent.yaml
configs/hydra/: default.yaml
configs/model/: transformer_combined.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
notebooks/: benchmark_run_functions.ipynb  explore_naive_strategies.ipynb
run/: train_ppo_agent.py  viz_naive_strategies.py  viz_ppo_agent.py
src/: env_definitions.py
src/actions/: __init__.py  act_drul.py  act_randomly.py
src/optim/: __init__.py  configure_optimizers.py  lamb.py
src/ppo/: __init__.py  data_loader.py  ppo_agent.py  ppo_trainer.py  rollout_buffer.py  torch_action_wrapper.py  transformer_encoder.py
src/runs/: __init__.py  batch_runner.py  run_actions.py  run_actions_batch.py  run_actions_max_tile.py
src/stats/: __init__.py  running_stats_vec.py
src/trainer/: trainer.py
tests/: test_running_stats_vec.py  test_workflows.py
tests/actions/: test_act_drul.py  test_act_randomly.py
tests/integration/: test_ppo_integration.py
tests/optim/: configure_bert_optimizers_test.py
tests/ppo/: test_data_loader.py  test_log_prob_consistency.py  test_masking_grad.py  test_ppo_agent.py  test_rollout_buffer.py  test_transformer_encoder.py
tests/runs/: test_batch_runner.py  test_run_actions.py  test_run_actions_batch.py  test_run_actions_max_tile.py
